--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cdk-ssm-parameter-cross-region",
+  "name": "@pepperize/cdk-ssm-parameters-cross-region",
+  "description": "Store, read and lookup AWS SSM Parameters cross-region",
   "repository": {
     "type": "git",
-    "url": "https://github.com/patrick.florek/cdk-ssm-parameter-cross-region.git"
+    "url": "https://github.com/pepperize/cdk-ssm-parameters-cross-region.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -16,7 +17,10 @@
     "format": "npx projen format",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:dotnet": "npx projen package:dotnet",
+    "package:java": "npx projen package:java",
     "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -36,8 +40,9 @@
   },
   "devDependencies": {
     "@pepperize/projen-awscdk-construct": "^0.0.161",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^27",
     "@types/node": "^12",
+    "@types/prettier": "2.6.0",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "2.1.0",
@@ -48,7 +53,7 @@
     "eslint-import-resolver-typescript": "^3.2.6",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
+    "jest": "^27",
     "jest-junit": "^13",
     "jsii": "^1.62.0",
     "jsii-diff": "^1.62.0",
@@ -56,9 +61,9 @@
     "json-schema": "^0.4.0",
     "npm-check-updates": "^12",
     "prettier": "^2.7.1",
-    "projen": "^0.58.31",
+    "projen": "^0.60.16",
     "standard-version": "^9",
-    "ts-jest": "^28.0.6",
+    "ts-jest": "^27",
     "ts-node": "^10",
     "typescript": "^4.7.4"
   },
@@ -67,10 +72,19 @@
     "constructs": "^10.0.5"
   },
   "keywords": [
-    "cdk"
+    "aws",
+    "cdk",
+    "cross-region",
+    "parameter",
+    "parameter-store",
+    "ssm",
+    "utilities"
   ],
   "main": "lib/index.js",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
     "testMatch": [
@@ -116,7 +130,23 @@
   "stability": "stable",
   "jsii": {
     "outdir": "dist",
-    "targets": {},
+    "targets": {
+      "java": {
+        "package": "com.pepperize.cdk.ssm_parameters_cross_region",
+        "maven": {
+          "groupId": "com.pepperize",
+          "artifactId": "cdk-ssm-parameters-cross-region"
+        }
+      },
+      "python": {
+        "distName": "pepperize.cdk-ssm-parameters-cross-region",
+        "module": "pepperize_cdk_ssm_parameters_cross_region"
+      },
+      "dotnet": {
+        "namespace": "Pepperize.CDK",
+        "packageId": "Pepperize.CDK.SsmParametersCrossRegion"
+      }
+    },
     "tsc": {
       "outDir": "lib",
       "rootDir": "src"
